--- a/src/main/webapp/static/404.html
+++ b/src/main/webapp/static/404.html
@@ -10,92 +10,74 @@
 <meta name="Description" content="Azolla" />
 <meta name="Author" content="ShaneKing,sk@azolla.org" />
 <link rel="shortcut icon" href="/static/img/favicon.png" />
-<!-- Bootstrap core CSS -->
-<link href="/static/3th/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-<!-- Custom styles for this template -->
-<link href="/static/3th/bootstrap/css/footer/sticky-footer-navbar.css" rel="stylesheet" />
-<!-- Just for debugging purposes. Don't actually copy this line! -->
-<!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-	<script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
-	<script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
-<![endif]-->
+<link href="/static/3th/ProwerV4/style.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="wrap">
-		<!-- Fixed navbar -->
-		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="#">ShaneKing</a>
-				</div>
-				<div class="collapse navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li class="active">
-							<a href="#">Home</a>
-						</li>
-						<li>
-							<a href="#about">About</a>
-						</li>
-						<li>
-							<a href="#contact">Contact</a>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								Dropdown
-								<b class="caret"></b>
-							</a>
-							<ul class="dropdown-menu">
-								<li>
-									<a href="#">Action</a>
-								</li>
-								<li>
-									<a href="#">Another action</a>
-								</li>
-								<li>
-									<a href="#">Something else here</a>
-								</li>
-								<li class="divider"></li>
-								<li class="dropdown-header">Nav header</li>
-								<li>
-									<a href="#">Separated link</a>
-								</li>
-								<li>
-									<a href="#">One more separated link</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-				<!--/.nav-collapse -->
+		<div id="header">
+			<div id="logo">
+				<a href="http://shaneking.org">ShaneKing</a>
+			</div>
+			<div class="menu-menu-container">
+				<ul id="menu-menu" class="menu">
+					<li id="menu-item-5" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-5">
+						<a href="http://shaneking.org">Home</a>
+					</li>
+					<li id="menu-item-20" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-20">
+						<a href="http://shaneking.org/?cat=9">Dev</a>
+					</li>
+					<li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-476">
+						<a href="http://shaneking.org/?cat=60">Study</a>
+					</li>
+					<li id="menu-item-616" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-616">
+						<a href="http://shaneking.org/?cat=70">Thinks</a>
+					</li>
+					<li id="menu-item-401" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-401">
+						<a href="http://shaneking.org/?cat=53">Support</a>
+						<ul class="sub-menu">
+							<li id="menu-item-487" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-487">
+								<a href="http://shaneking.org/?cat=65">FindClass</a>
+							</li>
+							<li id="menu-item-934" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-934">
+								<a href="http://shaneking.org/?cat=115">Roc</a>
+							</li>
+						</ul>
+					</li>
+					<li id="menu-item-4" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-4">
+						<a href="http://shaneking.org/?cat=1">Others</a>
+					</li>
+					<li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33">
+						<a href="http://shaneking.org/?page_id=24">About</a>
+					</li>
+				</ul>
 			</div>
 		</div>
-		<!-- Begin page content -->
-		<div class="container">
-			<div class="page-header">
+		<div id="descr">
+			<ul>
+				<li>
+					<a id="rss_icon" href="http://shaneking.org/?feed=rss2">RSS Feed</a>
+				</li>
+			</ul>
+			有梦才有精彩！
+		</div>
+		<div id="content">
+			<div id="nopage">
 				<h1>404</h1>
+				<div id="search">
+					<form id="searchform" method="get" action="http://shaneking.org">
+						<input type="text" value="" name="s" id="s" size="30">
+						<button type="submit">搜索</button>
+					</form>
+				</div>
 			</div>
-			<p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
+		</div>
+		<div id="footer">
 			<p>
-				Use
-				<a href="../sticky-footer-navbar">the sticky footer with a fixed navbar</a>
-				if need be, too.
+				<a href="http://www.miitbeian.gov.cn" target="_blank">沪ICP备12006026号</a>
+				. &copy; 2011 - 2014 ShaneKing.org . Powered by
+				<a href="http://ShaneKing.org" target="_blank">ShaneKing.org</a>
 			</p>
 		</div>
 	</div>
-	<div id="footer">
-		<div class="container">
-			<p class="text-muted">Place sticky footer content here.</p>
-		</div>
-	</div>
-	<script src="/static/3th/jquery/jquery.min.js"></script>
-	<script src="/static/3th/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
