--- a/src/main/webapp/html/foreground.html
+++ b/src/main/webapp/html/foreground.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Foreground</title>
-    <!-- Bootstrap -->
-    <link href="/3th/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+	<title>Foreground</title>
+	<meta name="keywords" content="Azolla" />
+	<meta name="Description" content="Azolla" />
+	<meta name="Author" content="ShaneKing,sk@azolla.org" />
+	<link rel="shortcut icon" href="/img/favicon.png" />
+	<!-- Bootstrap -->
+	<link href="/3th/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
     <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<header>
-    <div class="container">
-        <img src="/img/favicon.png">
-    </div>
-</header>
+<body class="roc-body">
+	<header class="roc-header">
+		<div class="container">
+			<div class="row">
+			 	<div class="col-xs-12">
+			 		<a class="branding" href="/">
+			 			<img src="/img/favicon.png"/>
+			 		</a>
+			 	</div>
+			</div>
+		</div>
+	</header>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="/3th/jquery/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/3th/bootstrap/js/bootstrap.min.js"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="/3th/jquery/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="/3th/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
