--- a/src/main/webapp/html/post.html
+++ b/src/main/webapp/html/post.html
@@ -41,7 +41,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="/">Study</a></li>
-                        <li class="dropdown">
+                        <li class="dropdown active">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                                 Support
                                 <span class="caret"></span>
@@ -51,7 +51,7 @@
                                 <li><a href="/">Roc</a></li>
                                 <li class="divider"></li>
                                 <li class="dropdown-header">App</li>
-                                <li><a href="/">Roc</a></li>
+                                <li><a href="/">Kwt</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -82,9 +82,6 @@
                             <small>
                                 <time>2014.06.26</time>
                             </small>
-                            <a class="anchorjs-link" href="/">
-                                <span class="anchorjs-icon"></span>
-                            </a>
                         </h2>
                         <p id="roc-i-test-1-1">做为一个设计师，在如今的多屏时代，从传统的WEB设计跨入移动APP设计是必不可免的，由于设备的变革，整体的设计思路也在革新，设计工具当然也随之前进。</p>
                         <p id="roc-i-test-1-2">APP设计不同于WEB设计的一个地方是，电脑本身即是设计工具的载体也是最终呈现的载体，所以做APP的设计时，需要衔接电脑及移动设备，能实时的预览最终呈现的效果。</p>
@@ -94,35 +91,73 @@
                         <p id="roc-i-test-1-5">多数是略俯视的角度，并稍稍偏向侧面。这个角度称为“标准视觉”。<br>
                             人们从标准视角识别物体的速度总是最快的。</p>
                         <p id="roc-i-test-1-6">人们具有特定的心智模型，预先设想了各内容在电脑屏幕和使用的特定应用、网站上应该出现的位置，并且往往带着这样的心智模型看屏幕。</p>
-                        <p> <a href="/">阅读详细 »</a></p>
-                    </section>
-                    <section class="bs-docs-section">
-                        <h2 class="page-header" id="roc-i-test-2">设计师必备的3个iPad Apps推荐
-                            <small>
-                                <time>2014.06.26</time>
-                            </small>
-                            <a class="anchorjs-link" href="/">
-                                <span class="anchorjs-icon"></span>
-                            </a>
-                        </h2>
-                        <p id="roc-i-test-2-1">做为一个设计师，在如今的多屏时代，从传统的WEB设计跨入移动APP设计是必不可免的，由于设备的变革，整体的设计思路也在革新，设计工具当然也随之前进。</p>
-                        <p id="roc-i-test-2-2">APP设计不同于WEB设计的一个地方是，电脑本身即是设计工具的载体也是最终呈现的载体，所以做APP的设计时，需要衔接电脑及移动设备，能实时的预览最终呈现的效果。</p>
-                        <p id="roc-i-test-2-3"><img src="/img/favicon.png" alt="Blog layout example"></p>
-                        <p id="roc-i-test-2-4">在视觉皮质之外还有一处特殊区域，专门用来识别人脸，称为梭形脸部区（FFA,Fusiform Face Area）。<br>
-                            自闭症患者不用梭形脸部区识别人脸。</p>
-                        <p id="roc-i-test-2-5">多数是略俯视的角度，并稍稍偏向侧面。这个角度称为“标准视觉”。<br>
-                            人们从标准视角识别物体的速度总是最快的。</p>
-                        <pre><code>$ bower install bootstrap</code></pre>
-                        <p id="roc-i-test-2-6">人们具有特定的心智模型，预先设想了各内容在电脑屏幕和使用的特定应用、网站上应该出现的位置，并且往往带着这样的心智模型看屏幕。</p>
-                        <p> <a href="/">阅读详细 »</a></p>
+                        <div class="bs-callout bs-callout-info">
+                            <h4>Tag</h4>
+                            <div class="roc-c-div-tag">
+                                <a href="/">标签1</a>
+                                <a href="/">标签标签2</a>
+                                <a href="/">标签标签标签3</a>
+                            </div>
+                        </div>
+                        <div class="bs-callout bs-callout-warning">
+                            <h4>Comment</h4>
+                            <ul class="media-list">
+                                <li class="media">
+                                    <div class="media-left">
+                                        <img class="media-object" alt="64x64" src="/img/favicon.png" style="width: 64px; height: 64px;">
+                                    </div>
+                                    <div class="media-body">
+                                        <h4 class="media-heading">Media heading</h4>
+                                        <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo.</p>
+                                    </div>
+                                </li>
+                                <li class="media">
+                                    <div class="media-left">
+                                        <img class="media-object" alt="64x64" src="/img/favicon.png" style="width: 64px; height: 64px;">
+                                    </div>
+                                    <div class="media-body">
+                                        <h4 class="media-heading">Media heading</h4>
+                                        <p>Cras sit amet nibh libero, in gravida nulla.</p>
+                                    </div>
+                                </li>
+                                <li class="media">
+                                    <div class="media-left">
+                                        <img class="media-object" alt="64x64" src="/img/favicon.png" style="width: 64px; height: 64px;">
+                                    </div>
+                                    <div class="media-body">
+                                        <h4 class="media-heading">Media heading</h4>
+                                        <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <h4>New</h4>
+                            <form class="form-horizontal">
+                                <div class="form-group">
+                                    <label for="commentName" class="col-sm-1 control-label">Name</label>
+                                    <div class="col-sm-11">
+                                        <input type="text" class="form-control" id="commentName" placeholder="Name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="commentEmail" class="col-sm-1 control-label">Email</label>
+                                    <div class="col-sm-11">
+                                        <input type="email" class="form-control" id="commentEmail" placeholder="Email">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-offset-1 col-sm-11">
+                                        <textarea class="form-control" rows="3"></textarea>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-offset-1 col-sm-11">
+                                        <button type="submit" class="btn btn-default">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </section>
                 </article>
-                <nav>
-                    <ul class="pager">
-                        <li><a href="/">Previous</a></li>
-                        <li><a href="/">Next</a></li>
-                    </ul>
-                </nav>
             </main>
             <aside class="col-md-3 hidden-print hidden-xs hidden-sm">
                 <div class="panel panel-default">
@@ -144,32 +179,32 @@
                         <a href="/">标签标签标签标签4</a>
                     </div>
                 </div>
-                <div class="panel panel-default bs-docs-sidebar affix-top">
+                <div class="panel panel-default bs-docs-sidebar affix-top roc-c-div-tag-post">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Archive</h3>
+                        <h3 class="panel-title">Post</h3>
                     </div>
                     <div class="panel-body">
-                        <ul class="nav bs-docs-sidenav">
+                        <ul class="nav">
                             <li>
-                                <a href="#roc-i-test-1">roc-i-test-1</a>
+                                <a href="/">roc-i-test-1</a>
                                 <ul class="nav">
-                                    <li><a href="#roc-i-test-1-1">roc-i-test-1-1</a></li>
-                                    <li><a href="#roc-i-test-1-2">roc-i-test-1-2</a></li>
-                                    <li><a href="#roc-i-test-1-3">roc-i-test-1-3</a></li>
-                                    <li><a href="#roc-i-test-1-4">roc-i-test-1-4</a></li>
-                                    <li><a href="#roc-i-test-1-5">roc-i-test-1-5</a></li>
-                                    <li><a href="#roc-i-test-1-6">roc-i-test-1-6</a></li>
+                                    <li><a href="/">roc-i-test-1-1</a></li>
+                                    <li><a href="/">roc-i-test-1-2</a></li>
+                                    <li><a href="/">roc-i-test-1-3</a></li>
+                                    <li><a href="/">roc-i-test-1-4</a></li>
+                                    <li><a href="/">roc-i-test-1-5</a></li>
+                                    <li><a href="/">roc-i-test-1-6</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#roc-i-test-2">roc-i-test-2</a>
+                                <a href="/">roc-i-test-2</a>
                                 <ul class="nav">
-                                    <li><a href="#roc-i-test-2-1">roc-i-test-2-1</a></li>
-                                    <li><a href="#roc-i-test-2-2">roc-i-test-2-2</a></li>
-                                    <li><a href="#roc-i-test-2-3">roc-i-test-2-3</a></li>
-                                    <li><a href="#roc-i-test-2-4">roc-i-test-2-4</a></li>
-                                    <li><a href="#roc-i-test-2-5">roc-i-test-2-5</a></li>
-                                    <li><a href="#roc-i-test-2-6">roc-i-test-2-6</a></li>
+                                    <li><a href="/">roc-i-test-2-1</a></li>
+                                    <li><a href="/">roc-i-test-2-2</a></li>
+                                    <li><a href="/">roc-i-test-2-3</a></li>
+                                    <li><a href="/">roc-i-test-2-4</a></li>
+                                    <li><a href="/">roc-i-test-2-5</a></li>
+                                    <li><a href="/">roc-i-test-2-6</a></li>
                                 </ul>
                             </li>
                         </ul>
