--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -179,7 +179,7 @@
         </div>
     </div>
 </div>
-<footer class="bs-docs-footer">
+<footer class="bs-docs-footer affix-bottom">
     <p>
         <a href="http://www.miitbeian.gov.cn" target="_blank">沪ICP备12006026号</a>
         . © ShaneKing
