--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -59,7 +59,7 @@
         </form>
     </div>
 </div>
-<footer class="bs-docs-footer navbar-fixed-bottom">
+<footer class="bs-docs-footer">
     <p>
         <a href="http://www.miitbeian.gov.cn" target="_blank">沪ICP备12006026号</a>
         . © ShaneKing
